# football-analysis

./: .gitignore  Cloud_Inference.ipynb  README.md  pyproject.toml
configs/: default.yaml  merge_test.yaml
data/: dataset_merged.yaml
kaggle/: train-ball-detector.ipynb  train-player-detector.ipynb  train_merged_model.ipynb  train_pitch_keypoint_detector_kaggle.ipynb
scripts/: auto_label_dataset.py  data_preparation.py  download_assets.py  download_roboflow_images.py  generate_pitch_keypoint_img.py  generate_test_png.py  predict_image.py  run_pipeline.py  setup.sh  setup_env.bat
src/football_ai/: __init__.py  cli.py  dashboard.py
src/football_ai/analytics/: heatmap_generator.py  movement_analyzer.py  possession_analyzer.py
src/football_ai/classification/: goalkeeper_classifier.py  referee_classifier.py  role_override.py  role_smoother.py  team_classifier.py  track_debug_exporter.py
src/football_ai/commentary/: __init__.py  inference.py  inference_single_video_CLIP.py  llm_enhancer.py  train.py  tts_manager.py
src/football_ai/config/: loader.py  schema.py
src/football_ai/detection/: detection_result.py  detector.py  football_detector.py  shared_inference.py
src/football_ai/events/: match_event_detector.py
tests/: test_detection_result.py  test_goalkeeper_classifier.py  test_heatmap_generator.py  test_homography.py  test_movement_analyzer.py  test_possession_analyzer.py  test_radar_mapper.py  test_referee_classifier.py  test_role_override.py  test_role_smoother.py  test_team_classifier.py  test_track_debug_exporter.py  test_track_state.py
(+22 files in other folders)
